# gen/httpapi/oas_request_encoders_gen.go
@@ -24,6 +24,20 @@ func encodeCreateTenantRequest(
 	return nil
 }
 
+func encodeRegisterTenantRequest(
+	req *RegisterTenantRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeUpdateTenantRequest(
 	req *UpdateTenantRequest,
 	r *http.Request,
